--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
-
+Packages/microsoft.azure.kinect.bodytracking.1.0.1
+Packages/microsoft.azure.kinect.bodytracking.dependencies.0.9.1
+Packages/microsoft.azure.kinect.bodytracking.dependencies.cudnn.0.9.1
+Packages/microsoft.azure.kinect.sensor.1.3.0
+Packages/system.buffers.4.4.0
+Packages/system.memory.4.5.3
+Packages/system.reflection.emit.lightweight.4.6.0
+Packages/system.runtime/compilerservices.unsafe.4.5.2
 Library/Artifacts/14/14969df2371a1a93ff4717e26b442ffc
 Library/Artifacts/1a/1ac26acf5952a4cfb311077a8c24a599
 Library/Artifacts/1c/1c91b3cbfa137ba1857193e6f2b9c24c
