--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,6 +48,9 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\Models\Conifers [BOTD]\Render Pipeline Support\Built-in RP\CTI Runtime Components\Scripts\CTI_CustomWind.cs" />
+     <Compile Include="Assets\Models\Standard Assets\Environment\Water\Water\Scripts\Displace.cs" />
+     <Compile Include="Assets\Models\Standard Assets\Environment\Water\Water\Scripts\PlanarReflection.cs" />
+     <Compile Include="Assets\Models\Standard Assets\Environment\Water (Basic)\Scripts\WaterBasic.cs" />
      <Compile Include="Assets\Scripts\Body.cs" />
      <Compile Include="Assets\Scripts\Smoother.cs" />
      <Compile Include="Assets\Scripts\TrackerHandler.cs" />
@@ -56,7 +59,9 @@
      <Compile Include="Assets\GlobalScript.cs" />
      <Compile Include="Assets\Skybox\ColorSkies\Demo\Scripts\LookCamera.cs" />
      <Compile Include="Assets\Config\ConfigLoader.cs" />
+     <Compile Include="Assets\Models\Standard Assets\Environment\Water\Water\Scripts\GerstnerDisplace.cs" />
      <Compile Include="Assets\Scripts\SkeletalTrackingProvider.cs" />
+     <Compile Include="Assets\Models\Rocks and Boulders 2\Shaders\RotateGameObject.cs" />
      <Compile Include="Assets\Models\Conifers [BOTD]\Render Pipeline Support\Built-in RP\CTI Runtime Components\Scripts\CTI_Utils.cs" />
      <Compile Include="Assets\Scripts\Constants.cs" />
      <Compile Include="Assets\Scripts\BackgroundDataProvider.cs" />
@@ -64,26 +69,39 @@
      <Compile Include="Assets\Scripts\SkeletonPosition.cs" />
      <Compile Include="Assets\HitboxManager.cs" />
      <Compile Include="Assets\Scripts\HandCollider.cs" />
+     <Compile Include="Assets\Models\Standard Assets\Environment\Water\Water\Scripts\WaterTile.cs" />
+     <Compile Include="Assets\Models\Standard Assets\Environment\Water\Water\Scripts\SpecularLighting.cs" />
      <Compile Include="Assets\Config\Configs.cs" />
+     <Compile Include="Assets\Models\Standard Assets\Environment\Water\Water\Scripts\WaterBase.cs" />
+     <Compile Include="Assets\Models\Standard Assets\Environment\Water\Water\Scripts\MeshContainer.cs" />
      <Compile Include="Assets\Scripts\PuppetAvatar.cs" />
      <Compile Include="Assets\Singleton.cs" />
      <Compile Include="Assets\Skeleton\CameraFlipper.cs" />
      <Compile Include="Assets\Scripts\BackgroundData.cs" />
+     <Compile Include="Assets\Models\Standard Assets\Environment\Water\Water\Scripts\Water.cs" />
      <Compile Include="Assets\Skybox\ColorSkies\Demo\Scripts\SkyboxChanger.cs" />
      <Compile Include="Assets\comboManager.cs" />
      <None Include="Assets\Models\Conifers [BOTD]\Render Pipeline Support\Built-in RP\CTI Runtime Components\Shaders\CTI_LOD_Bark_Array_301.shader" />
      <None Include="Assets\Models\Conifers [BOTD]\Render Pipeline Support\Built-in RP\CTI Runtime Components\Shaders\CTI_LOD_Billboard_301.shader" />
+     <None Include="Assets\Models\Rocks and Boulders 2\Shaders\Blend SM2.shader" />
      <None Include="Assets\Models\Conifers [BOTD]\Render Pipeline Support\Built-in RP\CTI Runtime Components\Resources\CTI_Camera-DepthNormalTexture_301.shader" />
      <None Include="Assets\Models\Conifers [BOTD]\Conifers [BOTD] URP Readme.txt" />
+     <None Include="Assets\Models\Standard Assets\Environment\Water\Water4\Shaders\WaterInclude.cginc" />
      <None Include="Assets\Models\Conifers [BOTD]\Render Pipeline Support\Built-in RP\CTI Runtime Components\Resources\CTI_Internal-DeferredShading.shader" />
      <None Include="Assets\Models\Conifers [BOTD]\Getting started.txt" />
+     <None Include="Assets\Models\Rocks and Boulders 2\Shaders\Blend SM3.shader" />
+     <None Include="Assets\Models\Standard Assets\Environment\Water\Water4\Shaders\FXWater4Advanced.shader" />
      <None Include="Assets\Models\Conifers [BOTD]\Render Pipeline Support\Built-in RP\CTI Runtime Components\Shaders\Includes\CTI_BillboardVertex_301.cginc" />
+     <None Include="Assets\Models\Rocks and Boulders 2\Shaders\shader info.txt" />
      <None Include="Assets\Models\Conifers [BOTD]\Render Pipeline Support\Built-in RP\CTI Runtime Components\Shaders\Includes\CTI_TranslucentLighting_301.cginc" />
      <None Include="Assets\Models\Conifers [BOTD]\Render Pipeline Support\Built-in RP\CTI Runtime Components\Shaders\CTI_LOD_Bark_301.shader" />
      <None Include="Assets\Models\Conifers [BOTD]\Render Pipeline Support\Built-in RP\CTI Runtime Components\Resources\CTI_Internal-DeferredReflections.shader" />
      <None Include="Assets\Models\Conifers [BOTD]\Render Pipeline Support\Built-in RP\CTI Runtime Components\Shaders\Includes\CTI_indirect.cginc" />
      <None Include="Assets\Models\Conifers [BOTD]\Render Pipeline Support\Built-in RP\CTI Runtime Components\Shaders\CTI_LOD_Leaves_301.shader" />
+     <None Include="Assets\Models\Standard Assets\Environment\Water\Water4\Shaders\FXWater4Simple.shader" />
+     <None Include="Assets\Models\Standard Assets\Environment\Water\Water\Shaders\FXWaterPro.shader" />
      <None Include="Assets\Models\Conifers [BOTD]\Render Pipeline Support\Built-in RP\CTI Runtime Components\Shaders\Includes\CTI_Builtin4xTreeLibraryTumbling_301.cginc" />
+     <None Include="Assets\Models\Standard Assets\Environment\Water (Basic)\Shaders\FXWaterBasic.shader" />
  <Reference Include="UnityEngine">
  <HintPath>C:/Program Files/Unity/Hub/Editor/2020.2.3f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
  </Reference>
