--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,15 +60,15 @@
     <Compile Include="Assets\Scripts\PoseChanger.cs" />
     <Compile Include="Assets\Scripts\SceneStartupScript.cs" />
     <Compile Include="Assets\Scripts\Skeleton_Stuff\Body.cs" />
-    <Compile Include="Assets\Scripts\Smoother.cs" />
-    <Compile Include="Assets\Scripts\TrackerHandler.cs" />
+    <Compile Include="Assets\Scripts\Skeleton_Stuff\Smoother.cs" />
+    <Compile Include="Assets\Scripts\Skeleton_Stuff\TrackerHandler.cs" />
     <Compile Include="Assets\Scripts\CustomColors.cs" />
-    <Compile Include="Assets\Scripts\Skeleton.cs" />
+    <Compile Include="Assets\Scripts\Skeleton_Stuff\Skeleton.cs" />
     <Compile Include="Assets\Scripts\Sound.cs" />
     <Compile Include="Assets\Scripts\PoseRenderer.cs" />
     <Compile Include="Assets\Skybox\ColorSkies\Demo\Scripts\LookCamera.cs" />
     <Compile Include="Assets\Config\ConfigLoader.cs" />
-    <Compile Include="Assets\Scripts\SkeletalTrackingProvider.cs" />
+    <Compile Include="Assets\Scripts\Skeleton_Stuff\SkeletalTrackingProvider.cs" />
     <Compile Include="Assets\Models\Rocks and Boulders 2\Shaders\RotateGameObject.cs" />
     <Compile Include="Assets\Scripts\Scene_Managers\TaiChiSceneManager.cs" />
     <Compile Include="Assets\Scripts\Scene_Managers\FireFightSceneManager.cs" />
@@ -76,12 +76,12 @@
     <Compile Include="Assets\Scripts\Constants.cs" />
     <Compile Include="Assets\Scripts\Skeleton_Stuff\BackgroundDataProvider.cs" />
     <Compile Include="Assets\Scripts\main.cs" />
-    <Compile Include="Assets\Scripts\SkeletonPosition.cs" />
+    <Compile Include="Assets\Scripts\Skeleton_Stuff\SkeletonPosition.cs" />
     <Compile Include="Assets\Scripts\HitboxManager.cs" />
     <Compile Include="Assets\Scripts\HandCollider.cs" />
     <Compile Include="Assets\Scripts\Scene_Managers\SampleSceneManager.cs" />
     <Compile Include="Assets\Config\Configs.cs" />
-    <Compile Include="Assets\Scripts\PuppetAvatar.cs" />
+    <Compile Include="Assets\Scripts\Skeleton_Stuff\PuppetAvatar.cs" />
     <Compile Include="Assets\Scripts\Singleton.cs" />
     <Compile Include="Assets\Scripts\Scene_Managers\OpeningSceneManager.cs" />
     <Compile Include="Assets\Skeleton\CameraFlipper.cs" />
